# python-project-lvl1

./: Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: README.md  make-lint.yml
brain_games/: cli.py  engine.py  games_engine.py  play_even.py
brain_games/games/: calc.py  even.py  gcd.py  gcd_game.py  prime.py  progression.py
brain_games/scripts/: __init__.py  brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
